@@ -841,32 +841,67 @@ public class MUDPercolator extends StdLibrary implements AreaGenerationLibrary
 		final List<LayoutNode> roomsToLayOut = layoutManager.generate(size,direction);
 		if((roomsToLayOut==null)||(roomsToLayOut.size()==0))
 			throw new CMException("Unable to fill area of size "+size+" off layout "+layoutManager.name());
-		final LayoutNode[] mostRooms = new LayoutNode[Directions.DIRECTIONS_ALL_CODES.length];
+		final Map<Integer,LayoutNode> mostRooms = new HashMap<Integer,LayoutNode>();
 		final LayoutNode magicRoomNode = roomsToLayOut.get(0);
-		
-		// find the north-most, east-mode, etc rooms that can serve as extra Exits.
-		LayoutNode startOddDirNode = null;
-		for(int i=0;i<roomsToLayOut.size();i++)
+		final List<Integer> useExits = new XArrayList<Integer>(
+				Directions.INORTH, Directions.ISOUTH, Directions.IEAST, Directions.IWEST);
+		final int opDirection = Directions.getOpDirectionCode(direction);
+		boolean produceExternalExits = false;
+		for(final Integer dir : Directions.DIRECTIONS_ALL_ICODES)
 		{
-			LayoutNode node = roomsToLayOut.get(i); 
-			if(node.type()!=LayoutTypes.leaf)
+			if((dir.intValue() != opDirection)
+			&& defined.containsKey("ROOMTAG_GATEEXITROOM"+dir.toString()))
 			{
-				if(startOddDirNode == null)
-					startOddDirNode = node;
-				for(final int dir : Directions.DIRECTIONS_ALL_CODES)
+				if(!useExits.contains(dir))
+					useExits.add(dir);
+				produceExternalExits=true;
+			}
+		}
+		if(produceExternalExits)
+		{
+			mostRooms.put(Integer.valueOf(opDirection), magicRoomNode);
+			// find the north-most, east-mode, etc rooms that can serve as extra Exits.
+			// first setup default/starting rooms, preferring non-leafs
+			for(int i=0;i<roomsToLayOut.size();i++)
+			{
+				final LayoutNode node = roomsToLayOut.get(i);
+				if(node.type()!=LayoutTypes.leaf)
 				{
-					if((mostRooms[dir]==null)
-					&&(!node.links().containsKey(Integer.valueOf(dir))))
-						mostRooms[dir] = node;
+					for(final Integer dir : useExits)
+					{
+						if((!mostRooms.containsKey(dir))
+						&&(!node.links().containsKey(dir)))
+							mostRooms.put(dir, node);
+					}
+				}
+			}
+			// if non-leafs didn't work, grab the leafs
+			for(int i=0;i<roomsToLayOut.size();i++)
+			{
+				final LayoutNode node = roomsToLayOut.get(i);
+				if(node.type()==LayoutTypes.leaf)
+				{
+					for(final Integer dir : useExits)
+					{
+						if((!mostRooms.containsKey(dir))
+						&&(!node.links().containsKey(dir)))
+							mostRooms.put(dir, node);
+					}
+				}
+			}
+			// finally, just put the start node
+			if(magicRoomNode != null)
+			{
+				for(final Integer dir : useExits)
+				{
+					if(!mostRooms.containsKey(dir))
+						mostRooms.put(dir, magicRoomNode);
 				}
 			}
 		}
-		for(final int dir : Directions.DIRECTIONS_ALL_CODES)
-		{
-			if(mostRooms[dir]==null)
-				mostRooms[dir] = startOddDirNode;
-		}
-		// now count the leafs, and figure out the northmost, etc
+		// now count the leafs,
+		// and finish the Main mostRooms by finding non-leaf
+		// rooms that better fit the direction to travel
 		int numLeafs=0;
 		for(int i=0;i<roomsToLayOut.size();i++)
 		{
@@ -874,51 +909,31 @@ public class MUDPercolator extends StdLibrary implements AreaGenerationLibrary
 			if(node.type()==LayoutTypes.leaf)
 				numLeafs++;
 			else
+			if(produceExternalExits)
 			{
-				if((node.coord()[1] < mostRooms[Directions.NORTH].coord()[1])
-				&&(!node.links().containsKey(Integer.valueOf(Directions.NORTH))))
-					mostRooms[Directions.NORTH] = node;
-				if((node.coord()[1] > mostRooms[Directions.SOUTH].coord()[1])
-				&&(!node.links().containsKey(Integer.valueOf(Directions.SOUTH))))
-					mostRooms[Directions.SOUTH] = node;
-				if((node.coord()[0] < mostRooms[Directions.WEST].coord()[0])
-				&&(!node.links().containsKey(Integer.valueOf(Directions.WEST))))
-					mostRooms[Directions.WEST] = node;
-				if((node.coord()[0] > mostRooms[Directions.EAST].coord()[0])
-				&&(!node.links().containsKey(Integer.valueOf(Directions.EAST))))
-					mostRooms[Directions.EAST] = node;
-
-				if((node.coord()[1] < mostRooms[Directions.NORTHWEST].coord()[1])
-				&&(node.coord()[0] < mostRooms[Directions.NORTHWEST].coord()[0])
-				&&(!node.links().containsKey(Integer.valueOf(Directions.NORTHWEST))))
-					mostRooms[Directions.NORTHWEST] = node;
-				if((node.coord()[1] > mostRooms[Directions.SOUTHWEST].coord()[1])
-				&&(node.coord()[0] < mostRooms[Directions.SOUTHWEST].coord()[0])
-				&&(!node.links().containsKey(Integer.valueOf(Directions.SOUTHWEST))))
-					mostRooms[Directions.SOUTHWEST] = node;
-				if((node.coord()[1] < mostRooms[Directions.NORTHEAST].coord()[1])
-				&&(node.coord()[0] > mostRooms[Directions.NORTHEAST].coord()[0])
-				&&(!node.links().containsKey(Integer.valueOf(Directions.NORTHEAST))))
-					mostRooms[Directions.NORTHEAST] = node;
-				if((node.coord()[1] > mostRooms[Directions.SOUTHEAST].coord()[1])
-				&&(node.coord()[0] > mostRooms[Directions.SOUTHEAST].coord()[0])
-				&&(!node.links().containsKey(Integer.valueOf(Directions.SOUTHEAST))))
-					mostRooms[Directions.SOUTHEAST] = node;
+				for(final Integer dir : useExits)
+				{
+					final LayoutNode curMostNode = mostRooms.get(dir);
+					if((Directions.isMoreDirections(node.coord(), curMostNode.coord(), dir.intValue()))
+					&&(!node.links().containsKey(dir)))
+						mostRooms.put(dir, node);
+				}
 			}
 			if(node.links().size()==0)
 				throw new CMException("Created linkless node with "+layoutManager.name());
 		}
+		if(produceExternalExits)
 		{
 			// for finding mostRooms for UP/DOWN & GATE
 			boolean filledInDirs=true;
 			for(int i=0;i<4;i++)
-				filledInDirs = (mostRooms[i]!=null) && filledInDirs;
+				filledInDirs = (mostRooms.containsKey(Integer.valueOf(i))) && filledInDirs;
 			if(filledInDirs)
 			{
-				long lowY = mostRooms[Directions.NORTH].coord()[1];
-				long lowX = mostRooms[Directions.WEST].coord()[0];
-				long hiY = mostRooms[Directions.SOUTH].coord()[1];
-				long hiX = mostRooms[Directions.EAST].coord()[0];
+				long lowY = mostRooms.get(Directions.INORTH).coord()[1];
+				long lowX = mostRooms.get(Directions.IWEST).coord()[0];
+				long hiY = mostRooms.get(Directions.ISOUTH).coord()[1];
+				long hiX = mostRooms.get(Directions.IEAST).coord()[0];
 				while(lowY<hiY)
 				{
 					lowY++;
@@ -931,16 +946,16 @@ public class MUDPercolator extends StdLibrary implements AreaGenerationLibrary
 					if(lowX<hiX)
 						hiX--;
 				}
-				if(startOddDirNode != null)
+				if(magicRoomNode != null)
 				{
-					LayoutNode closestN = startOddDirNode;
+					LayoutNode closestN = magicRoomNode;
 					long closestDistance = Math.abs(lowX - closestN.coord()[0]) + Math.abs(lowY - closestN.coord()[1]);
 					for(int i=0;i<roomsToLayOut.size();i++)
 					{
 						final LayoutNode node=roomsToLayOut.get(i);
 						if(node.type() != LayoutTypes.leaf)
 						{
-							long distance = Math.abs(lowX - node.coord()[0]) + Math.abs(lowY - node.coord()[1]);
+							final long distance = Math.abs(lowX - node.coord()[0]) + Math.abs(lowY - node.coord()[1]);
 							if(distance < closestDistance)
 							{
 								closestDistance = distance;
@@ -948,13 +963,13 @@ public class MUDPercolator extends StdLibrary implements AreaGenerationLibrary
 							}
 						}
 					}
-					mostRooms[Directions.UP] = closestN; 
-					mostRooms[Directions.DOWN] = closestN; 
-					mostRooms[Directions.GATE] = closestN; 
+					mostRooms.put(Directions.IUP, closestN);
+					mostRooms.put(Directions.IDOWN, closestN);
+					mostRooms.put(Directions.IGATE, closestN);
 				}
 			}
 		}
-					
+
 		defined.put("AREA_NUMLEAFS", ""+numLeafs);
 
 		// now break our rooms into logical groups, generate those rooms.
@@ -1113,27 +1128,59 @@ public class MUDPercolator extends StdLibrary implements AreaGenerationLibrary
 
 		Map<String,Object> groupDefined = groupDefinitions.get(magicGroup);
 		final Room magicRoom = processRoom(A,direction,piece,magicRoomNode,groupDefined);
+		if(produceExternalExits)
+			mostRooms.put(Integer.valueOf(opDirection), magicRoomNode);
 		for(final Map<String,Object> otherDefineds : groupDefinitions.values())
 		{
 			otherDefineds.remove("ROOMTAG_NODEGATEEXIT");
+			otherDefineds.remove("ROOMTAG_NODEGATEEXIT"+opDirection);
 			otherDefineds.remove("ROOMTAG_GATEEXITROOM");
+			otherDefineds.remove("ROOMTAG_GATEEXITROOM"+opDirection);
+			otherDefineds.remove("ROOMTAG_GATEEXITCLASS");
+			otherDefineds.remove("ROOMTAG_GATEEXITCLASS"+opDirection);
 		}
+		magicRoom.basePhyStats().addAmbiance("#GATE"+opDirection);
+		magicRoom.phyStats().addAmbiance("#GATE"+opDirection);
 		updateLayoutDefinitions(defined,groupDefined,groupDefinitions,roomGroups);
+		final Map<LayoutNode,Integer> revMostRooms = new HashMap<LayoutNode,Integer>();
+		if(produceExternalExits)
+		{
+			for(final Integer key : mostRooms.keySet())
+			{
+				final LayoutNode node = mostRooms.get(key);
+				if(groupDefined.containsKey("ROOMTAG_GATEEXITROOM"+key.toString()))
+					revMostRooms.put(node, key);
+			}
+		}
 
 		//now generate the rooms and add them to the area
 		//this is where all the real work is done. (well, after the magic room)
 		for(final List<LayoutNode> group : roomGroups)
 		{
 			groupDefined = groupDefinitions.get(group);
-
 			for(final LayoutNode node : group)
 			{
-				if(node!=magicRoomNode)
-					processRoom(A,direction,piece,node,groupDefined);
+				if(node != magicRoomNode)
+				{
+					if(produceExternalExits && revMostRooms.containsKey(node))
+					{
+						final Integer dirI = revMostRooms.get(node);
+						groupDefined.put("ROOMTAG_NODEGATEEXIT",groupDefined.get("ROOMTAG_NODEGATEEXIT"+dirI.toString()));
+						groupDefined.put("ROOMTAG_GATEEXITROOM",groupDefined.get("ROOMTAG_GATEEXITROOM"+dirI.toString()));
+						groupDefined.put("ROOMTAG_GATEEXITCLASS",groupDefined.get("ROOMTAG_GATEEXITCLASS"+dirI.toString()));
+						processRoom(A,direction,piece,node,groupDefined);
+						groupDefined.remove("ROOMTAG_NODEGATEEXIT");
+						groupDefined.remove("ROOMTAG_GATEEXITROOM");
+						groupDefined.remove("ROOMTAG_GATEEXITCLASS");
+					}
+					else
+						processRoom(A,direction,piece,node,groupDefined);
+				}
 			}
 			updateLayoutDefinitions(defined,groupDefined,groupDefinitions,roomGroups);
 		}
 
+		// do the magic room Link
 		for(final Integer linkDir : magicRoomNode.links().keySet())
 		{
 			if(linkDir.intValue() == Directions.getOpDirectionCode(direction))
@@ -1159,13 +1206,34 @@ public class MUDPercolator extends StdLibrary implements AreaGenerationLibrary
 					if((R==null)||(node.links().keySet().size()==0))
 						Log.errOut("MUDPercolator",layoutManager.name()+" generated a linkless node: "+node.toString());
 					else
-					for(final Integer linkDir : node.links().keySet())
 					{
-						final LayoutNode linkNode=node.getLink(linkDir.intValue());
-						if((R.getRawExit(linkDir.intValue())==null) || (linkNode.room() == null))
-							Log.errOut("MUDPercolator","Generated an unpaired node for "+R.roomID());
-						else
-							R.rawDoors()[linkDir.intValue()]=linkNode.room();
+						for(final Integer linkDir : node.links().keySet())
+						{
+							final LayoutNode linkNode=node.getLink(linkDir.intValue());
+							if((R.getRawExit(linkDir.intValue())==null) || (linkNode.room() == null))
+								Log.errOut("MUDPercolator","Generated an unpaired node for "+R.roomID());
+							else
+								R.rawDoors()[linkDir.intValue()]=linkNode.room();
+						}
+						if(produceExternalExits && revMostRooms.containsKey(node))
+						{
+							final Integer dirI = revMostRooms.get(node);
+							if(R.rawDoors()[dirI.intValue()]==null)
+							{
+								final Room outerRoom = (Room)groupDefined.get("ROOMTAG_GATEEXITROOM"+dirI.toString());
+								final Exit outerExit = (Exit)groupDefined.get("ROOMTAG_GATEEXITCLASS"+dirI.toString());
+								if((outerRoom != null) && (outerExit != null))
+								{
+									R.basePhyStats().addAmbiance("#GATE"+dirI.toString());
+									R.phyStats().addAmbiance("#GATE"+dirI.toString());
+									R.rawDoors()[dirI.intValue()] = outerRoom;
+									R.setRawExit(dirI.intValue(), (Exit)outerExit.copyOf());
+								}
+							}
+							groupDefined.remove("ROOMTAG_NODEGATEEXIT"+dirI.toString());
+							groupDefined.remove("ROOMTAG_GATEEXITROOM"+dirI.toString());
+							groupDefined.remove("ROOMTAG_GATEEXITCLASS"+dirI.toString());
+						}
 					}
 				}
 			}
