@@ -569,9 +569,11 @@ intersection, tee, offleaf </li>
 from
 a room</li>
         <li>$ROOMTAG_NODEGATEEXIT: if this room is a "gate"
-rooms,
+room,
 which direction
-is the gate in.</li>
+is the gate in.</li><li>$ROOMTAG_GATEEXITROOM: if this room is a "gate"
+room, which room object does it link to.</li><li>$ROOMTAG_GATEEXITCLASS: if this room is a "gate"
+room, which exit object should it use.</li><li>$ROOMTAG_NODEGATEEXIT&lt;dir&gt;: as above, but denoting a gate for direction number &lt;dir&gt;.</li><li>$ROOMTAG_GATEEXITROOM&lt;dir&gt;:&nbsp;as above, but denoting a gate for direction number &lt;dir&gt;.</li><li>$ROOMTAG_GATEEXITCLASS&lt;dir&gt;:&nbsp;as above, but denoting a gate for direction number &lt;dir&gt;.</li>
         <li>$ROOMLINK_N, $ROOMLINK_S, $ROOMLINK_E, $ROOMLINK_W,
 etc:
 "true" if an exit
